--- a/index.html
+++ b/index.html
@@ -56,12 +56,36 @@
 
         .data-content {
             margin-top: 20px;
+            position: relative;
         }
 
         .data-content .content {
             font-size: 18px;
             font-style: italic;
             color: #b3b3b3;
+        }
+
+        .clear-btn {
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            background-color: #e53935;
+            color: #fff;
+            border: none;
+            padding: 8px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 16px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+            transition: all 0.3s ease;
+        }
+
+        .clear-btn:hover {
+            background-color: #c62828;
+        }
+
+        .clear-btn:active {
+            transform: scale(0.9);
         }
     </style>
 </head>
@@ -74,6 +98,7 @@
         </div>
         <div class="data-content">
             <span class="content">Data will appear here</span>
+            <button class="clear-btn" style="display: none;" title="Clear data">🗑️</button>
         </div>
     </div>
     <script src="./popup.js"></script>
